--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 flask
 vaderSentiment
 gunicorn==21.2.0
-flask
-vaderSentiment
-gunicorn==21.2.0
 flask-sqlalchemy
 flask-login
 werkzeug
+psycopg2-binary
